fix overflow

--- a/style/Theme.css
+++ b/style/Theme.css
@@ -25,6 +25,7 @@ body
 {
     margin: 0;
     overflow-x: hidden;
+    overflow-y: hidden;
     height: 100%;
     /* background: radial-gradient(ellipse at bottom, #235e6f 0%, #090a0f 100%); */
     background-color: var(--skyblue);
